// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers:DesktopHeader style:StyledDesktopHeaderLink should render the correct CSS for the StyledDesktopHeaderLink component 1`] = `
.c0 {
  opacity: 0.53;
  font-family: Avenir,sans-serif;
  font-size: 20px;
  font-weight: 500;
  color: #ffffff;
  margin-right: 120px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 2px solid transparent;
}

<div
  className="c0"
/>
`;

exports[`containers:DesktopHeader style:StyledDesktopHeaderLink should render the correct CSS for the StyledDesktopHeaderLink component when active prop is passed 1`] = `
.c0 {
  opacity: 0.53;
  font-family: Avenir,sans-serif;
  font-size: 20px;
  font-weight: 500;
  color: #ffffff;
  margin-right: 120px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 2px solid transparent;
  cursor: default;
  opacity: 1;
  border-bottom: 2px solid #fff;
}

<div
  className="c0"
/>
`;
